# summer-of-spin

challenge-1/challenge1/: Cargo.toml  spin.toml
challenge-1/challenge1/src/: lib.rs
challenge-2/challenge-2/: .gitignore  Cargo.toml  spin.toml
challenge-2/challenge-2/src/: lib.rs
