[package]
name = "challenge1"
authors = ["jessai <maya.jessai@gmail.com>"]
description = "First challenge of spin summer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
spin-sdk = "3.0.1"

[workspace]
